# app/schedule/dto/schedule.request.go
@@ -2,28 +2,16 @@ package dto
 
 import "github.com/google/uuid"
 
-type ScheduleRequest struct {
-	ID        uuid.UUID `json:"id" binding:"required"`
-	MovieID   uuid.UUID `json:"movie_id" binding:"required"`
-	StudioID  uuid.UUID `json:"studio_id" binding:"required"`
-	StartTime string    `json:"start_time" binding:"required"`
-	EndTime   string    `json:"end_time" binding:"required"`
-	Price     float64   `json:"price" binding:"required"`
-}
-
 type CreateSchedule struct {
 	MovieID   uuid.UUID `json:"movie_id" binding:"required"`
 	StudioID  uuid.UUID `json:"studio_id" binding:"required"`
 	StartTime string    `json:"start_time" binding:"required"`
-	EndTime   string    `json:"end_time" binding:"required"`
 	Price     float64   `json:"price" binding:"required"`
 }
 
 type UpdateSchedule struct {
-	ID        uuid.UUID `json:"id" binding:"required"`
-	MovieID   uuid.UUID `json:"movie_id" binding:"required"`
-	StudioID  uuid.UUID `json:"studio_id" binding:"required"`
-	StartTime string    `json:"start_time" binding:"required"`
-	EndTime   string    `json:"end_time" binding:"required"`
-	Price     float64   `json:"price" binding:"required"`
+	MovieID   *uuid.UUID `json:"movie_id" binding:"omitempty"`
+	StudioID  *uuid.UUID `json:"studio_id" binding:"omitempty"`
+	StartTime *string    `json:"start_time" binding:"omitempty"`
+	Price     *float64   `json:"price" binding:"omitempty,gt=0"`
 }
